k8s/manifests-642ab9/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-642ab9
  namespace: journee
  labels:
    app: journee-642ab9
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-642ab9
  template:
    metadata:
      labels:
        app: journee-642ab9
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-642ab9
          image: gcr.io/my-docker-471807/journee:v7.1.0
          ports:
            - containerPort: 3000
