k8s/manifests-642ab9/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-642ab9
  namespace: journee
spec:
  selector:
    app: journee-642ab9
  ports:
    - port: 80
      targetPort: 3000
